@@ -6,7 +6,9 @@ Installed JDK 19 with Java system environment variables
 ### Start
 ```
 cd ../ToDoAppJavaFX
-java -jar ToDoAppJavaFX.jar
+java --module-path "C:\infa\SDK\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml -jar ToDoAppJavaFX-1.0-SNAPSHOT.jar
+
 ```
+
 
 
